@@ -1,11 +1,14 @@
 version: 2.1
 
 orbs:
-  python: circleci/python@2.0.3
+  python: circleci/python@2.1.1
 
 workflows:
   main:
     jobs:
+      - test:
+          name: "Python 3.11"
+          v: "3.11"
       - test:
           name: "Python 3.10"
           v: "3.10"
@@ -26,7 +29,7 @@ jobs:
         type: string
         default: "latest"
     docker:
-      - image: circleci/python:<< parameters.v >>
+      - image: cimg/python:<< parameters.v >>
     steps: &steps
       - checkout
       - run: |
